--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app-admin-write.js": "/js/app-admin-write.js",
+    "/js/app-admin-read.js": "/js/app-admin-read.js",
+    "/js/app-admin-change.js": "/js/app-admin-change.js",
+    "/js/app-admin-index.js": "/js/app-admin-index.js"
 }
