--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "vuetify": "^1.3.13"
+        "vuetify": "^1.3.13",
+        "laravel-vue-pagination": "^2.2.0"
     }
 }
