--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+  "/js/read-app.js": "/js/read-app.js",
     "/js/app-admin-write.js": "/js/app-admin-write.js",
     "/js/app-admin-read.js": "/js/app-admin-read.js",
     "/js/app-admin-change.js": "/js/app-admin-change.js",
