--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "vuetify": "^1.3.13",
-        "laravel-vue-pagination": "^2.2.0"
+        "laravel-vue-pagination": "^2.2.0",
+        "vue-router": "^3.0.2",
+        "vuetify": "^1.3.13"
     }
 }
