--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,5 +5,6 @@
     "/js/app-admin-change.js": "/js/app-admin-change.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/app-admin-index.js": "/js/app-admin-index.js"
+    "/js/app-admin-index.js": "/js/app-admin-index.js",
+    "/js/public-app.js": "/js/public-app.js"
 }
